--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,6 +1,6 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 @import './base/common';
-@import './header';
+// @import './header';
 @import './modal';
 @import './pagination';
 // @import './base/reset';
