--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -31,6 +31,6 @@
   }
   
   // ---------------------BREAKPOINTS---------------------
-  $mobile: 375px;
-  $tablet: 768px;
-  $desktop: 1440px;
+  // $mobile: 375px;
+  // $tablet: 768px;
+  // $desktop: 1440px;
