--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -11,21 +11,21 @@
     margin: -1px;
   }
 
-  .container {
-    max-width: $mobile;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin: 0 auto;
+  // .container {
+  //   max-width: $mobile;
+  //   padding-left: 20px;
+  //   padding-right: 20px;
+  //   margin: 0 auto;
   
-    @media screen and (min-width: $tablet) {
-      max-width: $tablet;
-      padding-left: 32px;
-      padding-right: 32px;
-    }
+  //   @media screen and (min-width: $tablet) {
+  //     max-width: $tablet;
+  //     padding-left: 32px;
+  //     padding-right: 32px;
+  //   }
   
-    @media screen and (min-width: $desktop) {
-      max-width: $desktop;
-      padding-left: 24px;
-      padding-right: 24px;
-    }
-  }
+  //   @media screen and (min-width: $desktop) {
+  //     max-width: $desktop;
+  //     padding-left: 24px;
+  //     padding-right: 24px;
+  //   }
+  // }
