--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,7 +1,7 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
 @import './base/common';
-// @import './base/reset';
-// @import './base/fonts';
+@import './base/reset';
+@import './base/fonts';
 @import './base/main-page/categories';
 @import './base/main-page/home-page';
 @import './base/main-page/SupportUkraine';
@@ -11,3 +11,19 @@
 @import './abstracts/mixins';
 @import './abstracts/placeholders';
 @import './abstracts/vars';
+
+
+
+// components
+@import './components/all-categories';
+@import './components/auth-test';
+@import './components/paginator';
+@import './components/sign-in-form';
+@import './components/sign-up-form';
+@import './components/single-book-card';
+@import './components/single-book-popup';
+@import './components/single-category';
+@import './components/support';
+@import './components/best-sellers';
+@import './components/shopping-list';
+@import './components/back-to-top-button';
