--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,31 +1,39 @@
-.visually-hidden {
-    position: absolute;
-    white-space: nowrap;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    border: 0;
-    padding: 0;
-    clip: rect(0 0 0 0);
-    clip-path: inset(50%);
-    margin: -1px;
+body {
+  font-family: 'DM Sans', sans-serif;
+  font-size: 14px;
+  line-height: calc(18 / 14);
+  color: var(--primary-dark);
+  background-color: var(--bg-light);
+}
+
+.container {
+  max-width: 375px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0 auto;
+
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
   }
 
-  // .container {
-  //   max-width: $mobile;
-  //   padding-left: 20px;
-  //   padding-right: 20px;
-  //   margin: 0 auto;
-  
-  //   @media screen and (min-width: $tablet) {
-  //     max-width: $tablet;
-  //     padding-left: 32px;
-  //     padding-right: 32px;
-  //   }
-  
-  //   @media screen and (min-width: $desktop) {
-  //     max-width: $desktop;
-  //     padding-left: 24px;
-  //     padding-right: 24px;
-  //   }
-  // }
+  @media screen and (min-width:1440px) {
+    max-width: 1440px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
