authorization html sass

--- a/src/partials/common/authorization.html
+++ b/src/partials/common/authorization.html
@@ -6,8 +6,19 @@
 					<use href="/src/images/svg/icons.svg#icon-x-close"></use>
 				</svg>
 			</button>
-			<input class="form__email input" type="email" name="userEmail" placeholder="Email">
-			<input class="form__password input" type="password" name="userPassword" placeholder="Password">
+			<div class="wrapper-input">
+				<input class="form__email input" type="email" name="userEmail" placeholder="Email">
+				<svg class="input__mail" width="28" height="28">
+					<use href="/src/images/svg/icons.svg#icon-mail"></use>
+				</svg>
+			</div>
+
+			<div class="wrapper-input">
+				<input class="form__password input" type="password" name="userPassword" placeholder="Password">
+				<svg class="input__lock" width="28" height="28">
+					<use href="/src/images/svg/icons.svg#icon-lock"></use>
+				</svg>
+			</div>
 			<button class="form__submit" type="submit">Sign in</button>
 			<div class="type-of-auth">
 				<button class="form__sign-up 
@@ -35,8 +46,6 @@ btn__auth ">Sign up</button>
 					<use href="/src/images/svg/icons.svg#icon-lock"></use>
 				</svg>
 			</div>
-
-
 			<button class="form__submit" type="submit">Sign up</button>
 			<div class="type-of-auth">
 				<button class="form__sign-up 
