--- a/src/partials/common/authorization.html
+++ b/src/partials/common/authorization.html
@@ -7,7 +7,7 @@
 				</svg>
 			</button>
 			<div class="wrapper-input">
-				<input class="form__email input" type="email" name="userEmail" placeholder="Email" required>
+				<input class="form__email input " type="email" name="userEmail" placeholder="Email" required>
 				<svg class="input__mail" width="28" height="28">
 					<use href="/src/images/svg/icons.svg#icon-mail"></use>
 				</svg>
@@ -16,7 +16,7 @@
 			<div class="wrapper-input">
 				<input class="form__password input" type="password" name="userPassword" placeholder="Password" required>
 				<svg class="input__lock" width="28" height="28">
-					<use href="/src/images/svg/icons.svg#icon-lock"></use>
+					<use class="url-svg" href="/src/images/svg/icons.svg#icon-lock"></use>
 				</svg>
 			</div>
 			<button class="form__submit" type="submit">Sign in</button>
@@ -43,7 +43,7 @@
 			<div class="wrapper-input">
 				<input class="form__password input" type="password" name="userPassword" placeholder="Password" required>
 				<svg class="input__lock" width="28" height="28">
-					<use href="/src/images/svg/icons.svg#icon-lock"></use>
+					<use class="url-svg" href="/src/images/svg/icons.svg#icon-lock"></use>
 				</svg>
 			</div>
 			<button class="form__submit" type="submit">Sign up</button>
