class User closing forms

--- a/src/partials/common/authorization.html
+++ b/src/partials/common/authorization.html
@@ -1,5 +1,5 @@
-<div class="wrapper backdrop-form ">
-	<div class="block-of-forms">
+<div class="wrapper backdrop-form  backdrop">
+	<div class="modal">
 		<form class="form " id="sign-in">
 			<button type="button" class="form__close ">
 				<svg class="button__close" width="20" height="20">
@@ -24,8 +24,12 @@
 				<button class="form__sign-up btn__auth js__sign-up" type="button">Sign up</button>
 				<button class="form__sign-in btn__auth current-auth" type="button">Sign in</button>
 			</div>
-		</form>
+			<button type="button" class="check__auth">check auth</button>
+			<button type="button" class="sign__out">signOut</button>
 
+		</form>
+	</div>
+	<div class="modal">
 		<form class="form sign-up active" id="sign-up">
 			<button type="button" class="form__close js-modal-close">
 				<svg width="20" height="20">
