--- a/src/sass/components/_authorization.scss
+++ b/src/sass/components/_authorization.scss
@@ -1,15 +1,15 @@
+$animation-duration: 0.3s;
+$backdrop-opacity: 0.5;
+
 .backdrop-form {
 	height: 100vh;
 	background: var(--gradient);
 	position: relative;
 }
 .block-of-forms {
-	display: flex;
 	position: relative;
+	left: 50%;
 	top: 50%;
-	left: 0;
-	justify-content: center;
-	align-content: center;
 }
 .form {
 	display: none;
@@ -42,6 +42,13 @@
 		padding-right: 40px;
 		width: 579px;
 		height: 516px;
+	}
+	transition: transform $animation-duration;
+
+	&.hidden {
+		transform: translate(-50%, -50%) scale(0.5);
+		opacity: 0;
+		pointer-events: none;
 	}
 
 	&__submit {
@@ -93,12 +100,6 @@
 			fill: var(--primary-akzent);
 		}
 	}
-}
-
-#sign-in {
-	justify-content: center;
-	align-items: center;
-	display: flex;
 }
 
 .wrapper-input {
@@ -203,11 +204,31 @@
 
 .active {
 	display: flex;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .empty {
 	&:focus-within {
 		border: none;
 		outline: 2px solid #ff0000;
+	}
+}
+
+// Стили для backdrop
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: black;
+	z-index: 2;
+	transition: opacity $animation-duration;
+
+	&.hidden {
+		opacity: 0;
+		pointer-events: none;
 	}
 }
