--- a/src/sass/abstracts/_vars.scss
+++ b/src/sass/abstracts/_vars.scss
@@ -35,3 +35,25 @@
 $mobile: 375px;
 $tablet: 768px;
 $desktop: 1440px;
+
+// test-vars
+$bg-color: #F6F6F6;
+$bg-color-header: #FFFFFF;
+$primary-text-color: #111111;
+$secondary-text-color: rgba(17, 17, 17, 0.6); 
+$primary-accent-color: #EAC645;
+$secondary-accent-color: #4F2EE8;
+$accent-text-color: #4F2EE8;
+$logo-color: #000000;
+$primary-button-pagination-color: #111111;
+$secondary-button-pagination-color: #EAC645;
+$category-title-color: #B4AFAF;
+
+
+$bg-color-darkt: #202024;
+$bg-color-header-darkt: #111111;
+$primary-text-color-darkt: #FFFFFF;
+$secondary-text-color-darkt: rgba(255, 255, 255, 0.6);
+$logo-color-darkt: #F3F3F3;
+$button-pagination-color-darkt: #FFFFFF;
+$tertiary-text-color-darkt: #B4AFAF;
