--- a/src/partials/common/authorization.html
+++ b/src/partials/common/authorization.html
@@ -1,5 +1,5 @@
-<div class="wrapper backdrop-form  backdrop">
-	<div class="modal">
+<div class="wrapper backdrop-form  backdrop visually-hidden">
+	<div class="modal hidden">
 		<form class="form " id="sign-in">
 			<button type="button" class="form__close ">
 				<svg class="button__close" width="20" height="20">
@@ -29,8 +29,8 @@
 
 		</form>
 	</div>
-	<div class="modal">
-		<form class="form sign-up active" id="sign-up">
+	<div class="modal ">
+		<form class="form sign-up " id="sign-up">
 			<button type="button" class="form__close js-modal-close">
 				<svg width="20" height="20">
 					<use href="/src/images/svg/icons.svg#icon-x-close"></use>
