--- a/src/partials/ShoopingPage/shoppingList.html
+++ b/src/partials/ShoopingPage/shoppingList.html
@@ -1,21 +1,13 @@
-<section class="shopping_list">
-<div class="container shopping_list_page">
-    <div class="support shoplist-support">
-
-    </div>
-    <div class="shopping_list">
-      <h1 class="title_shopping_list">
-        Shopping <span class="title_shopping_list_span">List</span>
-      </h1>
-      <div class="shopping-list-container">
-        <div class="shopping-list-empty-page">
-          <p class="shopping-list-empty-text">
+<!-------------Shoppinglist Page local storage----------------->
+<section class="shopping-list">
+      <h1 class="shopping-list__title">Shopping <span class="shopping-list__title-span">List</span></h1>
+      <div class="shopping-list__container">
+        <div class="shopping-list__empty-page">
+          <p class="shopping-list__empty-text">
             This page is empty, add some books <br />
             and proceed to order.
           </p>
-          <div class="shopping-list-empty-image"></div>
+          <div class="shopping-list__empty-image"></div>
         </div>
       </div>
-    </div>
-  </div>
 </section>
