--- a/src/sass/index 2.css
+++ b/src/sass/index 2.css
@@ -300,35 +300,26 @@ address {
   background-color: #4F2EE8;
 }
 
-.shopping-list {
+.shopping_list {
   margin-top: 40px;
   font-family: "DM Sans";
 }
 
-.shopping-list__title {
+.title_shopping_list {
   width: 193px;
   font-weight: 700;
   font-size: 32px;
   line-height: 1.19;
   letter-spacing: -0.04em;
   margin-bottom: 40px;
-  margin-left: 20px;
   color: #111111;
 }
-@media screen and (min-width: 768px) {
-  .shopping-list__title {
-    font-size: 48px;
-    line-height: 1.08;
-    display: inline;
-  }
-}
 
-.shopping-list__title-span {
+.title_shopping_list_span {
   color: #4F2EE8;
-  display: inline;
 }
 
-.shopping-list__empty-image {
+.shopping-list-empty-image {
   background-image: url(../images/shoppinglist/booksMobile.png);
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -336,13 +327,13 @@ address {
   height: 198px;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .shopping-list__empty-image {
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .shopping-list-empty-image {
     background-image: url(../images/shoppinglist/booksMobile@2x.png);
     background-size: 265px 198px;
   }
 }
-.shopping-list__empty-image {
+.shopping-list-empty-image {
   background-image: url(../images/shoppinglist/booksTablet.png);
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -350,20 +341,20 @@ address {
   height: 241px;
 }
 
-@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .shopping-list__empty-image {
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .shopping-list-empty-image {
     background-image: url(../images/shoppinglist/booksTablet@2x.png);
     background-size: 322px 241px;
   }
 }
-.shopping-list__empty-page {
+.shopping-list-empty-page {
   margin-top: 120px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.shopping-list__empty-text {
+.shopping-list-empty-text {
   margin-bottom: 14px;
   font-family: "DM Sans";
   font-weight: 400;
@@ -371,7 +362,7 @@ address {
   line-height: 1.29;
   text-align: center;
   letter-spacing: -0.02em;
-  color: rgba(0, 0, 0, 0.6);
+  color: var(--text-empty-shoplist);
 }
 
 .auth-component {
