--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import "./base/main-page/top-books";
 @import "./base/main-page/home-page";
 @import "./base/main-page/SupportUkraine";
+@import "./components/header";
 
 @import "./base/shopingListPage/ShoppingList";
 
