--- a/src/sass/base/main-page/_top-books.scss
+++ b/src/sass/base/main-page/_top-books.scss
@@ -56,6 +56,7 @@
 .top-books-categories__list {
     display: flex;
     flex-direction: column;
+    padding: initial;
 
     margin-bottom: 8px;
 
