--- a/src/partials/common/authorization.html
+++ b/src/partials/common/authorization.html
@@ -1,13 +1,13 @@
-<div class="wrapper backdrop-form  backdrop visually-hidden">
-	<div class="modal hidden">
-		<form class="form " id="sign-in">
-			<button type="button" class="form__close ">
+<div class="wrapper backdrop-form  backdrop hidden">
+	<div class="modal">
+		<form class="form" id="sign-in">
+			<button type="button" class="form__close">
 				<svg class="button__close" width="20" height="20">
 					<use href="/src/images/svg/icons.svg#icon-x-close"></use>
 				</svg>
 			</button>
 			<div class="wrapper-input">
-				<input class="form__email input " type="email" name="userEmail" placeholder="Email" required>
+				<input class="form__email input" type="email" name="userEmail" placeholder="Email" required>
 				<svg class="input__mail" width="28" height="28">
 					<use href="/src/images/svg/icons.svg#icon-mail"></use>
 				</svg>
@@ -20,17 +20,16 @@
 				</svg>
 			</div>
 			<button class="form__submit" type="submit">Sign in</button>
-			<div class="type-of-auth  ">
+			<div class="type-of-auth">
 				<button class="form__sign-up btn__auth js__sign-up" type="button">Sign up</button>
 				<button class="form__sign-in btn__auth current-auth" type="button">Sign in</button>
 			</div>
 			<button type="button" class="check__auth">check auth</button>
 			<button type="button" class="sign__out">signOut</button>
-
 		</form>
 	</div>
-	<div class="modal ">
-		<form class="form sign-up " id="sign-up">
+	<div class="modal">
+		<form class="form sign-up" id="sign-up">
 			<button type="button" class="form__close js-modal-close">
 				<svg width="20" height="20">
 					<use href="/src/images/svg/icons.svg#icon-x-close"></use>
@@ -51,8 +50,8 @@
 				</svg>
 			</div>
 			<button class="form__submit" type="submit">Sign up</button>
-			<div class="type-of-auth ">
-				<button class="form__sign-up btn__auth current-auth " type="button">Sign up</button>
+			<div class="type-of-auth">
+				<button class="form__sign-up btn__auth current-auth" type="button">Sign up</button>
 				<button class="form__sign-in btn__auth js__sign-in" type="button">Sign in</button>
 			</div>
 		</form>
