--- a/src/sass/base/main-page/_categories.scss
+++ b/src/sass/base/main-page/_categories.scss
@@ -2,7 +2,7 @@
 .section-categories {
     // width: 356px;
     height: 352px;
-
+}
 .page-nav__link.section-categories {
     width: 356px;
     max-height: 472px;
