--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,19 +9,20 @@ body {
 .section-categories-suppot-thumb{
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   gap: 40px;
-  margin: 0 0 40px;
+  margin: 40px 0 40px;
 
   @media screen and (min-width: 768px) {
       flex-direction: row;
       gap: 32px;
-      margin: 0 0 100px;
+      margin: 40px 0 100px;
     }
 
   @media screen and (min-width: 1440px) {
       flex-direction: column;
       gap: 86px;
-      margin: 0
+      margin: 40px 0 0 0;
     }
 }
 
